--- a/_layouts/tasks.html
+++ b/_layouts/tasks.html
@@ -62,7 +62,7 @@
     <footer class="site-footer">
         <!-- Футер как в default.html -->
         <div class="footer-content">
-            <p>© {{ site.time | date: '%Y' }} {{ page.author | default: "Твое Имя/Ник" }}.</p>
+            <p>© 2023-{{ site.time | date: '%Y' }} {{ page.author | default: "Твое Имя/Ник" }}.</p>
             {% if page.footer_extra %}
                 <div class="footer-extra-content">{{ page.footer_extra | markdownify }}</div>
             {% endif %}
