--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,9 @@
         <!-- Управляется через show_ads: false в Front Matter страницы -->
         {% if page.show_ads != false %}
             <div id="ad-placeholder" class="ad-container">
-                <!-- Сюда JS загрузит рекламу -->
+                <script id="adsDataScript" type="application/json">
+                    {{ site.data.advertisements | jsonify }}
+                </script>
                 <p style="text-align:center; font-size: 0.8em; color: var(--text-color-muted);">Рекламный блок</p>
             </div>
         {% endif %}
@@ -82,7 +84,8 @@
 
     <!--  Скрипт для Рекламного Блока (если показывается)  -->
     {% if page.show_ads != false %}
-        <script src="{{ '/assets/js/ads.js' | relative_url }}"></script>
+    <!-- Подключаем его ПОСЛЕ данных -->
+        <script src="{{ '/assets/js/ads.js' | relative_url }}" async defer></script>
     {% endif %}
 
 </body>
