--- a/_layouts/task_detail.html
+++ b/_layouts/task_detail.html
@@ -6,7 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }} | Трекер Задач</title> <!-- Заголовок страницы -->
     <meta name="description" content="{{ page.excerpt | strip_html | truncatewords: 50 }}">
-
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript" >
+        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+        m[i].l=1*new Date();
+        for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+        k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+    
+        ym(99850299, "init", {
+            clickmap:true,
+            trackLinks:true,
+            accurateTrackBounce:true
+        });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/99850299" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
     <link rel="stylesheet" href="{{ '/assets/css/layout-styles.css' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/css/content-styles.css' | relative_url }}">
     <!-- Можно добавить стили специфичные для деталей задачи, если нужно -->
