--- a/_layouts/utility.html
+++ b/_layouts/utility.html
@@ -27,6 +27,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Source+Code+Pro&display=swap" rel="stylesheet">
+    
+    <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png"> 
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
+    <link rel="manifest" href="/assets/img/site.webmanifest">
 
     <!-- Стили ТОЛЬКО для Общей Структуры (Шапка/Подвал) -->
     <link rel="stylesheet" href="{{ '/assets/css/layout-styles.css' | relative_url }}">
