--- a/_layouts/defaultV2.html
+++ b/_layouts/defaultV2.html
@@ -28,7 +28,10 @@
     <meta name="keywords" content="{{ page.keywords | default: site.keywords | join: ', ' }}">
     <!-- {# --- Основные Стили --- #} -->
     <link rel="stylesheet" href="{{ '/assets/css/layout-styles.css' | relative_url }}">
-
+    <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png"> 
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
+    <link rel="manifest" href="/assets/img/site.webmanifest">
     <!-- {# --- Шрифты (если подключаются глобально) --- #} -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
