feat: enhance footer with additional navigation links
- Add sitemap link to footer for better site navigation
- Add changelog link to footer for easy access to commit history
- Improve footer structure with organized link sections
- Maintain existing Telegram and copyright information

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,6 +87,7 @@
             <!-- Стандартное содержимое футера  -->
             <p>{{ site.telegram | markdownify }}</p>
             <p>© 2023-{{ site.time | date: '%Y' }} {{ site.author | default: "Твое Имя/Ник" }}.</p>
+            <p><a href="/sitemap.html">🗺️ Карта сайта</a> | <a href="/changelog/">📝 Changelog</a></p>
         </div>
     </footer>
 
